--- a/src/app/components/all-products/all-products.component.html
+++ b/src/app/components/all-products/all-products.component.html
@@ -93,12 +93,13 @@
 <div class="row">
 <div class="places">
     <div class="section-title text-center">
-        <h2>most popular tixs</h2>
+        <h2>Top Tixs </h2>
         <div class="title-separator-outer ">
             <div class="title-separator bg-primary style-liner"></div>
         </div>
     </div>
     <!--Start hotel Button-->
+ 
     <div class="row">
         <div class="col-md-12">
             <div class="gallery-menu text-center gallery-menu-5">
@@ -114,9 +115,11 @@
     </div>
     <!--End gallery Button-->
 </div>
+<!-- <h1 style="font-family:Poppins;" ngif="_ps.products">{{_ps.products[0].v1}}</h1> -->
+
 <div class="gallery-items5">
-    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item  cat-2 cat-4 cat-6">
-        <div class="product-thumb">
+    <div  class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item  cat-2 cat-4 cat-6" >
+        <div class="product-thumb" >
             <div class="image">
                 <a href="#"><img src="assets/images/places/p1.jpg" alt="p1" title="p1" class="img-responsive" /></a>
                 <div class="hoverbox">
@@ -126,7 +129,7 @@
                     </span>
                 </div>
                 <div class="matter">
-                    <h2>New York city</h2>
+                  
                     <p>start from $375.00</p>
                     <ul class="list-inline">
                         <li><a href="#">top rates</a></li>
@@ -150,7 +153,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-1 cat-4 cat-5">
+  <!--   <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-1 cat-4 cat-5">
         <div class="product-thumb">
             <div class="image">
                 <a href="#"><img src="assets/images/places/p2.jpg" alt="p2" title="p2" class="img-responsive" /></a>
@@ -184,147 +187,8 @@
                 </div>
             </div>
         </div>
-    </div>
-        <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-2 cat-3 cat-4 cat-5">
-        <div class="product-thumb">
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p3.jpg" alt="p3" title="p3" class="img-responsive" /></a>
-                <div class="hoverbox">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p3.jpg"><i class="fa fa-link"></i></a>
-                    </span>
-                </div>
-                <div class="matter">
-                    <h2>Los angelas</h2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="caption">
-                <div class="inner">
-                    <span class="fa fa-map-marker"></span>
-                    <h4>Universal Studios</h4>
-                    <span>1270 Reviews</span>
-                    <div class="rate">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-2 cat-3">
-        <div class="product-thumb">
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p4.jpg" alt="p4" title="p4" class="img-responsive" /></a>
-                <div class="hoverbox">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p4.jpg"><i class="fa fa-link"></i></a>
-                    </span>
-                </div>
-                <div class="matter">
-                    <h2>san francisco</h2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="caption">
-                <div class="inner">
-                    <span class="fa fa-map-marker"></span>
-                    <h4>Golden Gate Bridge</h4>
-                    <span>1270 Reviews</span>
-                    <div class="rate">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-1 cat-2 cat-4 cat-6">
-        <div class="product-thumb">
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p5.jpg" alt="p5" title="p5" class="img-responsive" /></a>
-                <div class="hoverbox">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p5.jpg"><i class="fa fa-link"></i></a>
-                    </span>
-                </div>
-                <div class="matter">
-                    <h2>boston</h2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="caption">
-                <div class="inner">
-                    <span class="fa fa-map-marker"></span>
-                    <h4>Freedom Trail</h4>
-                    <span>1270 Reviews</span>
-                    <div class="rate">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-1  cat-4">
-        <div class="product-thumb">
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p6.jpg" alt="p6" title="p6" class="img-responsive" /></a>
-                <div class="hoverbox">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p6.jpg"><i class="fa fa-link"></i></a>
-                    </span>
-                </div>
-                <div class="matter">
-                    <h2>washington, d.c.</h2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="caption">
-                <div class="inner">
-                    <span class="fa fa-map-marker"></span>
-                    <h4>Lincoln Memorial</h4>
-                    <span>1270 Reviews</span>
-                    <div class="rate">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </div> -->
+   
 </div>
 </div>
 
