--- a/src/app/components/all-products/all-products.component.html
+++ b/src/app/components/all-products/all-products.component.html
@@ -103,25 +103,21 @@
     <div class="row">
         <div class="col-md-12">
             <div class="gallery-menu text-center gallery-menu-5">
-                <button type="button" class="active" data-filter="*">All</button>
-                <button type="button" data-filter=".cat-1">USA</button>
-                <button type="button" data-filter=".Tours">TOURS</button>
-                <button type="button" data-filter=".cat-3">EUROPE</button>
-                <button type="button" data-filter=".cat-4">INDIA</button>
-                <button type="button" data-filter=".cat-5">CHINA</button>
-                <button type="button" data-filter=".cat-6">SINGAPURE</button>
+                <button type="button" class="active" data-filter="*" >All</button>
+                <button type="button"  *ngFor="let category of _ps.categorys" attr.data-filter="{{category.filter}}" >{{category.name}}</button>
+
             </div>
         </div>
     </div>
     <!--End gallery Button-->
 </div>
-<!-- <h1 style="font-family:Poppins;" ngif="_ps.products">{{_ps.products[0].v1}}</h1> -->
 
 <div class="gallery-items5" >
-    <div  class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item"  *ngFor="let product of _ps.products"  >
-        <div class="product-thumb" >
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p1.jpg" alt="p1" title="p1" class="img-responsive" /></a>
+<a  >
+    <div  class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item "  *ngFor="let product of _ps.products"  [ngClass]="product.categoryAll"  (click)="send(product)">
+        <div  class="product-thumb" style=" box-shadow: 20px 20px 30px 0 rgba(44, 50, 50, 0.28);">
+            <div class="image" >
+                <a ><img  src="{{product.image}}" class="img-responsive" /></a>
                 <div class="hoverbox">
                     <div class="icon_plus" aria-hidden="true"></div>
                     <span>
@@ -129,18 +125,19 @@
                     </span>
                 </div>
                 <div class="matter">
-                  <H2>{{product.productName}}</H2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
+                  <H2 style="background-color:rgba(0, 0, 0, .5);padding:19px;font-family:Roboto;margin:0 0 0 0px;">{{product.productName}}</H2>
+                    
                 </div>
             </div>
             <div class="caption">
                 <div class="inner">
                     <span class="fa fa-map-marker"></span>
                     <!-- <h4>{{}}</h4> -->
+                    <p > start from $375.00</p>
+                    <ul class="list-inline">
+                        <li><a href="#">top rates</a></li>
+                        <li><a href="#">hotels deals </a></li>
+                    </ul>
                     <span>1270 Reviews</span>
                     <div class="rate">
                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -153,42 +150,7 @@
             </div>
         </div>
     </div>
-  <!--   <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12  grid-item cat-1 cat-4 cat-5">
-        <div class="product-thumb">
-            <div class="image">
-                <a href="#"><img src="assets/images/places/p2.jpg" alt="p2" title="p2" class="img-responsive" /></a>
-                <div class="hoverbox">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p2.jpg"><i class="fa fa-link"></i></a>
-                    </span>
-                </div>
-                <div class="matter">
-                    <h2>las vegas</h2>
-                    <p>start from $375.00</p>
-                    <ul class="list-inline">
-                        <li><a href="#">top rates</a></li>
-                        <li><a href="#">hotels deals </a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="caption">
-                <div class="inner">
-                    <span class="fa fa-map-marker"></span>
-                    <h4>Las Vegas Strip</h4>
-                    <span>1270 Reviews</span>
-                    <div class="rate">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-   
+    </a>
 </div>
 </div>
 
