--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -57,7 +57,7 @@
                                         
                                     </ul>
                                     <ul class="nav navbar-nav navbar-right popup">
-                                        <li><a href="#test-search" class="popup-with-zoom-anim" id="opensearch"><i class="fa fa-search"></i></a></li>
+                                        <li style="padding-top:30px;"><a href="#test-search" class="popup-with-zoom-anim" id="opensearch"><i class="fa fa-search"></i></a></li>
                                         <span id="myOverlay" class="overlay overlay_home1">
                                           <span class="closebtn" id="btnclose" title="Close Overlay">x</span>
                                         <span class="overlay-content">
@@ -68,7 +68,8 @@
                                           </span>
                                         </span>
                                     </ul>
-                                </div>                            </div>
+                                </div>                            
+                            </div>
                         </div>
                         <!-- END MENU DESIGN AREA -->
                     </div>
