--- a/src/app/components/all-products/all-products.component.html
+++ b/src/app/components/all-products/all-products.component.html
@@ -114,14 +114,18 @@
 
 <div class="gallery-items5" >
 <a  >
-    <div  class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item "  *ngFor="let product of _ps.products"  [ngClass]="product.categoryAll"  (click)="send(product)" >
-        <div  class="product-thumb" style=" box-shadow: 10px 10px 20px 0 rgba(44, 50, 50, 0.28);border-radius:50px;">
+    <div  class="col-md-4 col-lg-4 col-sm-6 col-xs-12 grid-item "  *ngFor="let product of _ps.products"  [ngClass]="product.categoryAll"  (click)="loadImages(product)"  routerLink="tix">
+        <div  class="product-thumb" style=" box-shadow: 10px 10px 20px 0 rgba(44, 50, 50, 0.28);border-radius:35px;">
             <div class="image" >
-                <a ><img  src="{{product.image}}" class="img-responsive" style="border-radius:50px 50px 0px 0px;" /></a>
-                <div class="hoverbox" style="border-radius:50px 50px 0px 0px;">
-                    <div class="icon_plus" aria-hidden="true"></div>
-                    <span>
-                        <a class="venobox" data-gall="myGallery" href="assets/images/places/p1.jpg"><i class="fa fa-link"></i></a>
+                <a ><img  src="{{product.image}}" class="img-responsive" style="border-radius:35px 35px 0px 0px;" /></a>
+                <div class="hoverbox" style="border-radius:35px 35px 0px 0px;">
+                    <div class="icon_plus" aria-hidden="true">                      
+                    </div>
+                    <span >
+                        <a class="venobox" data-gall="myGallery" href="{{product.image}}" >
+                            <i class="fa fa-link">
+                            </i>
+                        </a>
                     </span>
                 </div>
                 <div class="matter">
