--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -56,7 +56,7 @@
                             <!-- newsletter form -->
                             <form class="formnewsletter2">
                                 <input name="email" class="form-control" placeholder="E-mail Address" type="email">
-                                <button type="submit" class="hvr-shutter-out-horizontal">SIGN IN</button>
+                                <button type="submit" class="hvr-shutter-out-horizontal">SEND</button>
                             </form>
                             <!-- /.newsletter form -->
                         </div>
