--- a/src/app/components/tix/tix.component.html
+++ b/src/app/components/tix/tix.component.html
@@ -1,21 +1,21 @@
      <div class="inner-page-header">
-            <img src="assets/images/bg/tour-detailbg.jpg" alt="Inner Page Header" class="full-width">
+            <img src="assets/images/bg/blue.jpg" alt="Inner Page Header" class="full-width">
             <div class="title-breadcrumb">
                 <div class="container">
                     <div class="page-sub-title">
                         <!-- <h4>Our Tours</h4> -->
                     </div>
-                    <div class="site-page-header clear-fix">
+                 <!--    <div class="site-page-header clear-fix">
                         <div class="site-title" >
                             <h2 class="fontModerna">Tix Detail</h2>
                         </div>
-                    </div>
-                    <div class="site-page-breadcrumb">
+                    </div> -->
+                  <!--   <div class="site-page-breadcrumb">
                         <span  style="font-family:moderna;">
                             <a  href="#"  style="font-family:moderna;">Home </a> 
                             <i class="fa fa-angle-double-right"></i> Tour Detail
                         </span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
