--- a/src/app/components/all-products/all-products.component.html
+++ b/src/app/components/all-products/all-products.component.html
@@ -122,12 +122,12 @@
                 <div class="hoverbox" style="border-radius:35px 35px 0px 0px;">
                     <div class="icon_plus" aria-hidden="true">                      
                     </div>
-                    <span >
+                <!--     <span >
                         <a class="venobox" data-gall="myGallery" href="{{product.image}}" >
                             <i class="fa fa-link">
                             </i>
                         </a>
-                    </span>
+                    </span> -->
                 </div>
                 <div class="matter">
                   <H2 style="background-color:rgba(0, 0, 0, .5);padding:19px;font-family:Rubik;margin:0 0 0 0px;">{{product.productName}}</H2>
