--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="message-box">
                 <div class="container">
                     <div class="row">
-                        <p>Welcome to Bestshop ! Wrap new offers / gift every single day on Weekends - New Coupon code: T0mly811</p>
+                        <p>And if you work with us? take a look at Thetixsapp ...<b>  < -- o alguna frase que llame a visitar la pagina de thetixsapp </b></p>
                     </div>
                 </div>
             </div>
