--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,12 +19,12 @@
                         <!-- Top Bar -->
                         <div class="header_top">
                             <div class="col-md-12">
-                               <div class="pull-left">
-                                    <!-- <span><i class="flaticon-phone-receiver"></i>(1)111-123-458  Callus</span> -->
-                                    <!-- <span><i class="flaticon-send"></i>mail@example.com</span> -->
-                                </div>
+                               <!-- <div class="pull-left">
+                                    <span><i class="flaticon-phone-receiver"></i></span>
+                                    <span><i class="flaticon-send"></i></span>
+                                </div> -->
                                 <div class="pull-right">
-                                    <a href="#">Login /</a><a href="#">Register</a>
+                                    <a href="#">Login /</a><a href="https://www.thetixsapp.com" target="_blank">Register</a>
                                 </div> 
                             </div>
                         </div>
@@ -43,8 +43,8 @@
                                 <div class="navbar-collapse collapse no-padding">
                                     <ul class="nav navbar-nav navbar-left">
                                
-                                          <li  class="dropdown "><a   style="font-size:29px;font-family:moderna;" routerLink="about">About</a></li>
-                                        <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle"  style="font-size:29px;font-family:moderna;">Join<span class="caret"></span></a>
+                                          <li  class="dropdown "><a   style="font-family:moderna;" routerLink="about">About</a></li>
+                                        <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle"  style="font-family:moderna;">Join<span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a routerLink="collage">Customer</a></li>
                                                 <li><a routerLink="">Affiliate</a></li>
@@ -52,15 +52,16 @@
                                                
                                             </ul>
                                         </li>
-                                          <li  class="dropdown "><a  style="font-size:29px;font-family:moderna;" routerLink="contact" >Contact</a></li>
+                                          <li  class="dropdown "><a  style="font-family:moderna;" routerLink="contact" >Contact</a></li>
                                    
                                         
                                     </ul>
                                     <ul class="nav navbar-nav navbar-right popup">
                                         <li style="padding-top:30px;">
                                             <a href="#test-search" class="popup-with-zoom-anim" id="opensearch">
-                                                <i class="fa fa-search">
-                                                </i>
+                                             <mat-icon>shopping_cart</mat-icon>
+                                             <!--    <i class="fa fa-search">
+                                                </i> -->
                                             </a>
                                         </li>
                                         <span id="myOverlay" class="overlay overlay_home1">
@@ -68,7 +69,8 @@
                                         <span class="overlay-content">
                                             <form action="action_page.php">
                                               <input type="text" placeholder="Search.." name="search">
-                                              <button type="submit"><i class="fa fa-search"></i></button>
+                                              <mat-icon>shopping_cart</mat-icon>
+                                              <!-- <button type="submit"><i class="fa fa-search"></i></button> -->
                                             </form>
                                           </span>
                                         </span>
