--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -52,7 +52,7 @@ Version      : 1.0
 @import url('jquery.fancybox.min.css');
 @font-face {
     font-family: moderna;
-    src: url(fonts/moderna.ttf);
+    src: url(fonts/modernizer.ttf);
     /*font-weight: normal;*/
     /*font-style: normal;*/
 }
