--- a/src/app/components/all-products/all-products.component.html
+++ b/src/app/components/all-products/all-products.component.html
@@ -148,18 +148,17 @@
                     
                     <!-- <h4>{{}}</h4> -->
                     <div style="max-width:275px;">
-                     <span style="font-size:30px;font-family:moderna;color:#579ce0;">{{product.productName}}</span>
-                   
-                     </div>
-                     <div style="max-width:150px;align:center;">
-                          <div class="rate">
+                    <div class="rate" style="padding:0px 10px 10px 10px;">
                             <i class="fa fa-star" aria-hidden="true"></i>
                             <i class="fa fa-star" aria-hidden="true"></i>
                             <i class="fa fa-star" aria-hidden="true"></i>
                             <i class="fa fa-star" aria-hidden="true"></i>
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                         </div>
+                     <span style="font-size:30px;font-family:moderna;color:#579ce0;">{{product.productName}}</span>
+                   
                      </div>
+                    
                      
                     
                      <span class="fa fa-map-marker"></span> 
