--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -191,7 +191,7 @@ Version      : 1.0
         /*background: #000;*/
     }
     .menu-bg .navbar-collapse {
-        background: #000;
+        /*background: #000;*/
     }
     .menu-bg .mainmenu .navbar-nav li a:hover {
         color: #ccc;
