--- a/src/assets/css/color-theme/color-theme-2.css
+++ b/src/assets/css/color-theme/color-theme-2.css
@@ -13,6 +13,7 @@
 
 .header-bg {
     background-image: url(assets/img/backgrounds-min/waves-header-min.png);
+    background-size: 100%;
 }
 
 .header-blog,
