--- a/src/app/components/pfooter/pfooter.component.html
+++ b/src/app/components/pfooter/pfooter.component.html
@@ -1,25 +1,24 @@
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrapTwo.min.css">
+    <link rel="stylesheet" href="../../../assets/css/bootstrapTwo.min.css">
     <!-- Font Awesome -->
 
     <!-- Owl Carousel -->
   
     <!-- Lity -->
-    <link rel="stylesheet" href="assets/css/lity.min.css">
+    <link rel="stylesheet" href="../../../assets/css/lity.min.css">
     <!-- Anomations -->
-    <link rel="stylesheet" href="assets/css/animations.css">
+    <link rel="stylesheet" href="../../../assets/css/animations.css">
     <!-- Style-->
-    <link rel="stylesheet" href="assets/css/styleTwo.css">
+    <link rel="stylesheet" href="../../../assets/css/styleTwo.css">
     <!-- Media Queries-->
-    <link rel="stylesheet" href="assets/css/media-queries.css">
+    <link rel="stylesheet" href="../../../assets/css/media-queries.css">
     <!-- Color Theme -->
     <!--<link rel="stylesheet" href="css/color-theme/color-theme-1.css">-->
-    <link rel="stylesheet" href="assets/css/color-theme/color-theme-2.css">
+    <link rel="stylesheet" href="../../../assets/css/color-theme/color-theme-2.css">
     <!--<link rel="stylesheet" href="css/color-theme/color-theme-3.css">-->
     <!--<link rel="stylesheet" href="css/color-theme/color-theme-4.css">-->
     <!--<link rel="stylesheet" href="css/color-theme/color-theme-5.css">-->
     <!-- Switch Style -->
-    <!-- <link id="switch_style" href="css/color-theme/" rel="stylesheet"> -->
      <!--<div class="fluid-container">
             <div class="message-box">
                 <div class="container">
@@ -78,4 +77,4 @@
  
 </div>
 
-<script src="assets/js/main.js"></script>
+<!-- <script src="assets/js/main.js"></script> -->
