--- a/src/app/components/pop/dialog-overview-example-dialog.html
+++ b/src/app/components/pop/dialog-overview-example-dialog.html
@@ -26,5 +26,5 @@
 </div>
 <div mat-dialog-actions>
 	<button mat-button (click)="onNoClick()">No Thanks</button>
-	<button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+	<button mat-button (click)="onNoClick()" cdkFocusInitial>Ok</button>
 </div>
