--- a/src/assets/css/color-theme/color-theme-2.css
+++ b/src/assets/css/color-theme/color-theme-2.css
@@ -12,7 +12,7 @@
 }
 
 .header-bg {
-    background-image: url(assets/img/backgrounds-min/waves-header-min.png);
+    background-image: url(../../../assets/img/backgrounds-min/waves-header-min.png);
     background-size: 100%;
 }
 
@@ -21,7 +21,7 @@
 footer,
 .video,
 .call-to-action {
-    background-image: url(assets/img/backgrounds-min/waves-min.jpg);
+    background-image: url(../../../assets/img/backgrounds-min/waves-min.jpg);
 }
 
 @media (max-width: 768px) {
@@ -30,7 +30,7 @@ footer,
         background-image: linear-gradient(-180deg, rgba(238, 238, 238, 0.00) 0%, rgba(216, 216, 216, 0.00) 100%);
     }
     header {
-        background-image: url(assets/img/backgrounds-min/waves-min.jpg);
+        background-image: url(../../../assets/img/backgrounds-min/waves-min.jpg);
         background-position: center;
     }
 }
