remove partner,affiliate join option

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,14 +44,14 @@
                                     <ul class="nav navbar-nav navbar-left">
                                
                                           <li  class="dropdown "><a   style="font-family:moderna;" routerLink="about">About</a></li>
-                                        <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle"  style="font-family:moderna;">Join<span class="caret"></span></a>
+                                      <!--   <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle"  style="font-family:moderna;">Join<span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a routerLink="collage">Customer</a></li>
                                                 <li><a routerLink="">Affiliate</a></li>
                                                 <li><a href="#">Partner</a></li>
                                                
                                             </ul>
-                                        </li>
+                                        </li> -->
                                           <li  class="dropdown "><a  style="font-family:moderna;" routerLink="contact" >Contact</a></li>
                                    
                                         
