--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,7 +60,7 @@
                                         <li style="padding-top:30px;">
                                             <a href="#myCar" class="popup-with-zoom-anim" id="opencar">
                                         
-                                              <mat-icon matBadge="15" matBadgeColor="warn">shopping_cart</mat-icon>
+                                              <mat-icon matBadge="{{this._car.size}}" matBadgeColor="warn">shopping_cart</mat-icon>
                                              <!--    <i class="fa fa-search">
                                                 </i> -->
                                             </a>
